--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -30,10 +30,11 @@
           <span>Delete items from your wishlist and postings here</span>
         </div>
         <div class="col-lg-6">
-          <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">Contact Us</a>
+          <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">Contact Me</a>
           <span>Contact and support the developer</span>
         </div>
       </div>
+
 
       <footer class="footer">
         <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
