--- a/textchange/templates/textchange/navbar.html
+++ b/textchange/templates/textchange/navbar.html
@@ -2,6 +2,8 @@
 <div class="header clearfix">
   <nav>
     <ul class="nav nav-pills pull-right">
+      <li>  <button id="help" class="button"><a href="{% url 'textchange:help' %}" class="blacklink">help</a></button>
+</li>
       {% if request.user.is_authenticated %}
         <li role="presentation"><a href="{% url 'textchange:navbar' %}"><span class="blacklink">{{request.user}}, &nbsp;</span> logout</a></li>
       {% else %}
@@ -11,5 +13,3 @@
   </nav>
   <h3 class="text-muted"><a href="{% url 'textchange:index' %}" class="blacklink textbutton">Texchange UVic</a></h3>
 </div>
-
-<button id="help" class="button"><a href="{% url 'textchange:help' %}" class="blacklink">help</a></button>
