--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -9,8 +9,14 @@
 
 	  {% include "textchange/navbar.html" %}
 
+        <div style="margin-right: auto; margin-left: auto; width: 415px; display: block;">
         <h2>Your Postings and Wishlist</h2>
-        <p>In order to delete your postings or wishes press the delete button</p>
+        <span>You can manage your postings and wishes here...</span><br />
+          <ol>
+            <li type="circle">Press the delete button to delete wishes and postings.</li>
+            <li type="circle">You can click the textbook name to go to it's page.</li>
+          </ol>
+        </div>
 
       <div class="row marketing">
         <div class="col-lg-6">
