--- a/textchange/static/textchange/index.css
+++ b/textchange/static/textchange/index.css
@@ -30,14 +30,22 @@
   width: 110px;
 }
 
+#id_email {
+  width: 175px;
+}
+
+#id_subject {
+  width: 175px;
+}
+
 #noresults {
   color: red;
   font-weight: bold;
 }
 
 .feedbackcontent {
-  width: 500px;
-  height: 200px;
+  width: 460px;
+  height: 180px;
 }
 
 .option {
@@ -166,12 +174,10 @@
 }
 
 #help {
-  position: fixed;
-  height: 30px;
-  width: 50px;
-  bottom: 15px;
-  left: 15px;
+  margin-top: 7px;
+  margin-right: 2px;
   background-color: #C5C5C5;
+  z-index: 999;
 }
 
 html {
