--- a/textchange/templates/textchange/accountcreation.html
+++ b/textchange/templates/textchange/accountcreation.html
@@ -113,9 +113,8 @@
 
       </div>
 
-      <footer class="footer">
-        <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
-      </footer>
+      {% include "textchange/footer.html" %}
+
 
     </div> <!-- /container -->
 
