--- a/textchange/templates/textchange/contactpost.html
+++ b/textchange/templates/textchange/contactpost.html
@@ -27,13 +27,10 @@
       <div class="col-lg-6">
           <img src="{{ posting.image.url }}" id="postimage">
       </div>
-
-
     </div>
 
-    <footer class="footer">
-      <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
-    </footer>
+    {% include "textchange/footer.html" %}
+
 
   </div>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
