--- a/textchange/templates/textchange/contactwish.html
+++ b/textchange/templates/textchange/contactwish.html
@@ -26,9 +26,8 @@
 
     </div> <!-- /container -->
 
-    <footer class="footer">
-      <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
-    </footer>
+    {% include "textchange/footer.html" %}
+
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
