--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -42,10 +42,8 @@
       <p>and stuff</p>
       <a href="#toc">Back to Top</a>
 
+      {% include "textchange/footer.html" %}
 
-      <footer class="footer">
-        <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
-      </footer>
 
     </div> <!-- /container -->
 
