--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -26,7 +26,6 @@
    }(document, 'script', 'facebook-jssdk'));
     </script>
 
-
     <div class="container">
 
       {% include "textchange/navbar.html" %}
@@ -65,14 +64,11 @@
         <span>&nbsp;&nbsp;&nbsp;</span>
         <div class="fb-like" data-href="https://www.facebook.com/UvicTexchange" data-width="100px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div><span> Like the Facebook page</span>
       </br></br>
-      <footer class="footer">
-        <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
-      </footer>
-
+      {% include "textchange/footer.html" %}
     </div> <!-- /container -->
-
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
   </body>
 </html>
