--- a/textchange/templates/textchange/error.html
+++ b/textchange/templates/textchange/error.html
@@ -13,10 +13,8 @@
         <p class="lead">Insert sad meme</p>
       </div>
 
+      {% include "textchange/footer.html" %}
 
-      <footer class="footer">
-        <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
-      </footer>
 
     </div> <!-- /container -->
 
