--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -35,10 +35,8 @@
         </div>
       </div>
 
+      {% include "textchange/footer.html" %}
 
-      <footer class="footer">
-        <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
-      </footer>
 
     </div> <!-- /container -->
 
