--- a/textchange/templates/textchange/results.html
+++ b/textchange/templates/textchange/results.html
@@ -36,9 +36,8 @@
       </table>
     </div>
 
-      <footer class="footer">
-        <p>&copy; Brought to you by a student at the University of Victoria 2015</p>
-      </footer>
+    {% include "textchange/footer.html" %}
+
 
     </div> <!-- /container -->
 
