--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -11,35 +11,45 @@
 
       <h1>Application Help</h1>
       <p>This page gives a basic overview of all the main use cases that can be completed in the application. After reading this
-       you should know how to complete each use case in the most efficient way possible.</p>
-      <p>TLDR: Searching for textbooks by class name will not always be accurate. Searching by isbn, author, or textbook name is your best chance</p>
+       you should know how to complete each use case in the most efficient way possible. All of the following use cases start from
+       the homepage. To reach the homepage click "Texchange UVic" in the top left of any page.</p>
       <h2 id="toc">Table of Contents</h2>
       <ul>
-        <li><a href="#Create">Creating An Account</a></li>
+        <li><a href="#Create">Logging In</a></li>
         <li><a href="#Search">Searching</a></li>
         <li><a href="#PostWish">Creating Postings and Wishes</a></li>
         <li><a href="#Contact">Contacting Buyers and Sellers</a></li>
         <li><a href="#Wishlisting">Managing Wishlist and Postings</a></li>
       </ul>
 
-      <h2 id="Create">Creating An Account</h2>
-      <p>In order to create an account, first click on the create account button on the top right of the page.</p>
+      <h2 id="Create">Logging In</h2>
+      <p>In order to login simply click the Facebook login button in the top right corner of the screen. The reason we get you
+        login with Facebook is so you can communicate with other users when you want to trade textbooks.
+      </p>
       <a href="#toc">Back to Top</a>
       <h2 id="Search">Searching</h2>
       <p>In order to search for textbooks type keywords into the search box on the home page. You can search for your textbooks by typing your
-        class name, number, textbook name, textbook isbn, or textbook author. Searching by isbn is the most efficient way of looking for a textbook.
-        After searching you will be presented with a list of textbooks. Click on the arrow on the right side of one of the a box to go to the
+        class name, number, textbook name, textbook isbn, or textbook author. Entering multiple words into the search field will refine your search to match
+        both inputs. After searching you will be presented with a list of textbooks. Click on the arrow on the right side of one of the a box to go to the
         textbook details page.
       </p>
       <a href="#toc">Back to Top</a>
       <h2 id="PostWish">Creating Postings and Wishes</h2>
-      <p>In order to create a posting or add a book to your wishlist you must first search for the textbook and select it from the results page.</p>
+      <p>In order to create a posting or add a book to your wishlist you must first search for the textbook and select it from the results page. Afterwards,
+      you will be able to select the "Add a Posting" or "Add to your Wishlist" buttons below the textbooks details. When you click "Add to your Wishlist" the textbook
+      will be added to your wishlist immediately. When you click "Add a Posting" you will be brought to page in which you can add a price, condition, and image to
+      the posting. The price and condition fields are required. Below the textbook details and action buttons you can find lists of people who are looking for textbook
+      and lists of people who are selling the textbook.</p>
       <a href="#toc">Back to Top</a>
       <h2 id="Contact">Contacting Buyers and Sellers</h2>
-      <p>shit</p>
+      <p>In order to contact a buyer or seller you must first search for the textbook and select it from the results page.
+      At the bottom of the textbook page you can see two lists, "Possible Buyers" and "Possible Sellers". "Possible Buyers" is a list
+      of all the people who are currently looking to purchase that textbook. "Possible Sellers" is a list of people who are currently
+      selling that textbook. Click on the arrow button on the right side of one of those entries to go to the contact page.</p>
       <a href="#toc">Back to Top</a>
       <h2 id="Wishlisting">Managing Wishlist and Postings</h2>
-      <p>and stuff</p>
+      <p>You can manage your postings and wishes by clicking on the "Wishlists and Postings" button on the home page. From there
+      you can view and delete all your postings and wishes. You can also click on the textbook name to go to it's page.</p>
       <a href="#toc">Back to Top</a>
 
       {% include "textchange/footer.html" %}
