--- a/textchange/static/textchange/index.css
+++ b/textchange/static/textchange/index.css
@@ -31,11 +31,25 @@
 }
 
 #id_email {
-  width: 175px;
+  width: 180px;
 }
 
 #id_subject {
-  width: 175px;
+  width: 180px;
+}
+
+#id_condition {
+  width: 120px;
+}
+
+#id_price {
+  width: 150px;
+}
+
+#id_image {
+  margin-right: auto;
+  margin-left: auto;
+  width: 190px;
 }
 
 #noresults {
@@ -44,8 +58,8 @@
 }
 
 .feedbackcontent {
-  width: 460px;
-  height: 180px;
+  width: 470px;
+  height: 160px;
 }
 
 .option {
@@ -158,6 +172,11 @@
   text-decoration: none;
 }
 
+.borderrightleft {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
+
 .textbutton {
   background-color: #F8F8F8;
   padding: 6px;
@@ -170,12 +189,9 @@
 
 .nextbutton {
   width: 35px;
-
 }
 
 #help {
-  margin-top: 7px;
-  margin-right: 2px;
   background-color: #C5C5C5;
   z-index: 999;
 }
