--- a/textchange/templates/textchange/addposting.html
+++ b/textchange/templates/textchange/addposting.html
@@ -9,11 +9,19 @@
     <div class="container">
 
       {% include "textchange/navbar.html" %}
-      <div class="addpostform centertext" style="background-color: #F8F8F8; padding: 15px; border-radius: 15px;">
+      <div class="addpostform centertext" style="background-color: #F8F8F8; padding: 15px; border-radius: 15px; margin-top: 30px;">
         <p>{{ text.textbook_name }}</p>
         <p>{{ text.author }} &nbsp; {{ text.isbn }}</p>
         <form action="{% url 'textchange:addposting' uisbn=text.isbn %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
-          {{ form.as_p }}
+          {% for field in form %}
+            {{ field.errors }}
+            {{ field.label_tag }}
+            {{ field }}
+            </br>
+            {% if field.name != 'image' %}
+              </br>
+            {% endif %}
+          {% endfor %}
           <input type="submit" value="Add a Posting" class="good button"></input>
         </form>
       </div>
