Cosmetic things, prepare for new home

--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -20,6 +20,7 @@
         <li><a href="#PostWish">Creating Postings and Wishes</a></li>
         <li><a href="#Contact">Contacting Buyers and Sellers</a></li>
         <li><a href="#Wishlisting">Managing Wishlist and Postings</a></li>
+        <li><a href="#QA">Frequently Asked Questions</a></li>
       </ul>
 
       <h2 id="Create">Logging In</h2>
@@ -50,6 +51,25 @@
       <h2 id="Wishlisting">Managing Wishlist and Postings</h2>
       <p>You can manage your postings and wishes by clicking on the "Wishlists and Postings" button on the home page. From there
       you can view and delete all your postings and wishes. You can also click on the textbook name to go to it's page.</p>
+      <a href="#toc">Back to Top</a>
+      <h2 id="QA">Frequently Asked Questions</h2>
+      <p>Below are a number of frequently asked questions and their answers.</p>
+      <ul>
+        <li type="circle"><strong>How do I add my textbooks to the application?</strong></li></br>
+        <li type="none">First you have to search for your textbook in the searchbox at the home page.
+          Once you select your textbook click "Add to Wishlist" if you are trying to buy that textbook
+          and "Add a Posting" and fill out the following form if you are trying to sell that textbook.</li></br>
+        <li type="circle"><strong>What is the advantage to adding postings and wishes?</strong></li></br>
+        <li type="none">Adding postings or wishes allows other users searching for that textbook to find you,
+          that way you don't have to constantly search for buyers and sellers.
+          You can let the buyers and sellers find you.</li></br>
+        <li type="circle"><strong>How to bring back delete confirmation?</strong></li></br>
+        <li type="none"></li></br>
+        <li type="circle"><strong></strong></li></br>
+        <li type="none"></li></br>
+        <li type="circle"><strong></strong></li></br>
+        <li type="none"></li></br>
+      </ul>
       <a href="#toc">Back to Top</a>
 
       {% include "textchange/footer.html" %}
