Prepare launch, table link, remove facebookjs
-Made a new home page to prepare for launch
-Removed facebookjs and put in the html files
-Facebook like button does not work now (Will fix)
-Row is now clickable for results

--- a/textchange/static/textchange/index.css
+++ b/textchange/static/textchange/index.css
@@ -30,6 +30,17 @@
   width: 110px;
 }
 
+.resultstable td a div{
+  padding: 10px;
+}
+
+.resultstable td a {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
+
 #id_email {
   width: 180px;
 }
