--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -19,6 +19,8 @@
   <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
   <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
   <script src="{% static "textchange/index.js" %}"></script>
+  <script src="{% static "textchange/facebook.js" %}"></script>
+
 
   <link rel="shortcut icon" href="{% static "textchange/tabicon.png" %}">
 
@@ -31,8 +33,8 @@
   <!-- Info displayed when site it shared/linked -->
   <meta property="og:url"           content="http://www.texchange.ca" />
   <meta property="og:type"          content="website" />
-  <meta property="og:title"         content="UVic Texchange - Making exchanging textbooks easy" />
-  <meta property="og:description"   content="WHAT HAPPENED NEXT?! CLICKBAIT!" />
+  <meta property="og:title"         content="UVic Texchange" />
+  <meta property="og:description"   content="Making textbook exchange at UVic easy!" />
   <meta property="og:image"         content="../../static/textchange/linkpic.jpg" />
 
 </head>
