--- a/textchange/templates/textchange/navbar.html
+++ b/textchange/templates/textchange/navbar.html
@@ -102,7 +102,7 @@
   </nav>
 
 
-  <h3 class="nav nav-pills"><a href="{% url 'textchange:index' %}" class="blacklink">Texchange UVic</a></h3>
+  <h3 class="nav nav-pills"><a href="{% url 'textchange:home' %}" class="blacklink">Texchange UVic</a></h3>
 
 
 </div>
