--- a/textchange/templates/textchange/index.html
+++ b/textchange/templates/textchange/index.html
@@ -6,40 +6,19 @@
 
   <body>
 
+
+    <!-- Switch index and home in views.py
+    Fix html file names
+    Fix urls -->
+
+
+
     <div class="container">
-
-      {% include "textchange/navbar.html" %}
-
       <div class="jumbotron">
         <h1>Texchange!</h1>
-        <p class="lead">Buy and sell used textbooks, easily, and at low prices!</p>
-
-        <form method="POST"> {% csrf_token %}
-  		  {{ form3.as_p }}
-  		  <input id="search" class="button" type="submit" value="Search" name="Search"></input>
-        </form>
+        <p class="lead">Coming to students at UVic December 2015!</p>
       </div>
-
-      <div class="row marketing">
-        <div class="col-lg-6">
-          {% if curuser.is_authenticated %}
-            <a class="btn btn-lg btn-success option" href="{% url 'textchange:wishlisting' %}" role="button">Wishlist and Postings</a>
-          {% else %}
-            <a class="btn btn-lg btn-success option" id="notloggedwish" href="" role="button" title="Login Required.">Wishlist and Postings</a>
-          {% endif %}
-          <span>Delete items from your wishlist and postings here</span>
-        </div>
-        <div class="col-lg-6">
-          <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">Contact Me</a>
-          <span>Contact and support the developer</span>
-        </div>
-      </div>
-
-      {% include "textchange/footer.html" %}
-
-
     </div> <!-- /container -->
-
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
