Added my own css file, bootstraps was slow and big

--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -12,6 +12,7 @@
   {% load staticfiles %}
   <!-- Bootstrap core CSS -->
   <link href="{% static "textchange/index.css" %}" rel="stylesheet">
+  <link href="{% static "textchange/mycss.css" %}" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="{% static "textchange/jumbotron.css" %}" rel="stylesheet">
