--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -6,6 +6,25 @@
 
   <body>
 
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '1611807462418755',
+        xfbml      : true,
+        version    : 'v2.5'
+      });
+    };
+
+    <div id="fb-root"></div>
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=1611807462418755";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+  </script>
+
     <div class="container">
 
       {% include "textchange/navbar.html" %}
