Clickable rows on tables, small help update

--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -65,7 +65,7 @@
           You can let the buyers and sellers find you.</li></br>
         <li type="circle"><strong>How to bring back delete confirmation?</strong></li></br>
         <li type="none"></li></br>
-        <li type="circle"><strong></strong></li></br>
+        <li type="circle"><strong>Why are multiple results showing item for the same item?</strong></li></br>
         <li type="none"></li></br>
         <li type="circle"><strong></strong></li></br>
         <li type="none"></li></br>
