--- a/textchange/templates/textchange/wishlisting.html
+++ b/textchange/templates/textchange/wishlisting.html
@@ -9,7 +9,7 @@
 
 	  {% include "textchange/navbar.html" %}
 
-        <div style="margin-right: auto; margin-left: auto; width: 415px; display: block;">
+        <div class="wishlisting">
         <h2>Your Postings and Wishlist</h2>
         <span>You can manage your postings and wishes here...</span><br />
           <ol>
