--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -36,7 +36,7 @@
         you would just like to contact the developer, or you have other application ideas that you want developed for students at UVic
         please feel welcome to send a message with the form below.
       </p>
-      <div style="margin-left: auto; margin-right: auto; display: block; width: 510px;">
+      <div class="feedback" style="margin-left: auto; margin-right: auto; display: block;">
       <form method="post">
       {% csrf_token %}
       {% for field in form %}
@@ -52,6 +52,7 @@
       {% endfor %}
         <div class="form-actions">
           <button type="submit">Send Feedback</button>
+            {% if message %}<strong class="green">{{ message }}</strong>{% endif %}
         </div>
       </form>
     </div>
