--- a/textchange/templates/textchange/addposting.html
+++ b/textchange/templates/textchange/addposting.html
@@ -9,7 +9,7 @@
     <div class="container">
 
       {% include "textchange/navbar.html" %}
-      <div class="addpostform centertext" style="background-color: #F8F8F8; padding: 15px; border-radius: 15px; margin-top: 30px;">
+      <div class="addpostform centertext">
         <p>{{ text.textbook_name }}</p>
         <p>{{ text.author }} &nbsp; {{ text.isbn }}</p>
         <form action="{% url 'textchange:addposting' uisbn=text.isbn %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
