--- a/textchange/templates/textchange/results.html
+++ b/textchange/templates/textchange/results.html
@@ -26,19 +26,19 @@
       <table class="resultstable">
         {% if curuser.is_authenticated %}
           {% for items in query %}
-          <tr style="border-bottom: 1px solid #C5C5C5;">
-            <td style="width: 140px;"><a href="{% url 'textchange:textbook' uisbn=items.isbn %}" class="blacklink"><div><strong>{{items.class_name}}</strong></br>{{items.author}}</div></a></td>
-            <td style="width: 500px;"><a href="{% url 'textchange:textbook' uisbn=items.isbn %}" class="blacklink"><div>{{items.textbook_name}}</br>{{items.isbn}}</div></a></td>
-            <td style="width: 60px;"><a href = "{% url 'textchange:textbook' uisbn=items.isbn %}"><img src="../../static/textchange/nextarrow.png" class="nextbutton"></a></td>
+          <tr class="borderbot">
+            <td class="width140"><a href="{% url 'textchange:textbook' uisbn=items.isbn %}" class="blacklink"><div><strong>{{items.class_name}}</strong></br>{{items.author}}</div></a></td>
+            <td class="width500"><a href="{% url 'textchange:textbook' uisbn=items.isbn %}" class="blacklink"><div>{{items.textbook_name}}</br>{{items.isbn}}</div></a></td>
+            <td class="width60"><a href = "{% url 'textchange:textbook' uisbn=items.isbn %}"><img src="../../static/textchange/nextarrow.png" class="nextbutton"></a></td>
           </tr>
           {% endfor %}
         {% else %}
           {% for items in query %}
           <tr>
             <tr>
-              <td><a href="#" class="blacklink"><div><strong>{{items.class_name}}</strong></br>{{items.author}}</div></a></td>
-              <td><a href="#" class="blacklink"><div>{{items.textbook_name}}</br>{{items.isbn}}</div></a></td>
-              <td><a href = "#" title="Login Required."><img src="../../static/textchange/nextarrow.png" class="nextbutton" id="resultsbutton"></a></td>
+              <td class="width140"><a href="#" class="blacklink"><div><strong>{{items.class_name}}</strong></br>{{items.author}}</div></a></td>
+              <td class="width500"><a href="#" class="blacklink"><div>{{items.textbook_name}}</br>{{items.isbn}}</div></a></td>
+              <td class="width60"><a href="#" title="Login Required."><img src="../../static/textchange/nextarrow.png" class="nextbutton" id="resultsbutton"></a></td>
             </tr>
           {% endfor %}
         {% endif %}
