Minor cosmetic changes

--- a/textchange/templates/textchange/help.html
+++ b/textchange/templates/textchange/help.html
@@ -67,7 +67,7 @@
         <li type="none"></li></br>
         <li type="circle"><strong>Why are multiple results showing item for the same item?</strong></li></br>
         <li type="none"></li></br>
-        <li type="circle"><strong></strong></li></br>
+        <li type="circle"><strong>why facebook isnt working</strong></li></br>
         <li type="none"></li></br>
       </ul>
       <a href="#toc">Back to Top</a>
