--- a/textchange/templates/textchange/home.html
+++ b/textchange/templates/textchange/home.html
@@ -16,7 +16,7 @@
 
         <form method="POST"> {% csrf_token %}
   		  {{ form3.as_p }}
-  		  <input id="search" class="button" type="submit" value="Search" name="Search"></input>
+  		  <input id="search" class="button" type="submit" value="Search Textbooks" name="Search"></input>
         </form>
       </div>
 
