--- a/textchange/templates/textchange/textbook.html
+++ b/textchange/templates/textchange/textbook.html
@@ -28,7 +28,7 @@
           </tr></table></div>
           </br>
         {% else %}
-          <p>Item is offered for many textbooks.</p>
+          <p>Item is offered for many classes.</p>
         {% endif %}
 
         <div >
