Cosmetic and squash migrations

--- a/textchange/templates/textchange/home.html
+++ b/textchange/templates/textchange/home.html
@@ -27,7 +27,7 @@
           {% else %}
             <a class="btn btn-lg btn-success option" id="notloggedwish" href="" role="button" title="Login Required.">Wishlist and Postings</a>
           {% endif %}
-          <span>Delete items from your wishlist and postings here</span>
+          <span>Manage your wishlist and postings here</span>
         </div>
         <div class="col-lg-6">
           <a class="btn btn-lg btn-success option" href="{% url 'textchange:about' %}" role="button">Contact Me</a>
