--- a/textchange/templates/textchange/about.html
+++ b/textchange/templates/textchange/about.html
@@ -63,7 +63,7 @@
         <div class="fb-share-button" data-href="http://www.texchange.ca" data-layout="button_count"></div><span> Share the website</span>
         <span>&nbsp;&nbsp;&nbsp;</span>
         <div class="fb-like" data-href="https://www.facebook.com/UvicTexchange" data-width="100px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div><span> Like the Facebook page</span>
-      </br></br>
+      </br></br><p>Honourable mentions go out to Konrad Schultz, Daniel Bolink, and Curtis St. Pierre for helping me on some of the problems I ran into.</p>
       {% include "textchange/footer.html" %}
     </div> <!-- /container -->
 
