--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -3,11 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Texchange organizes textbooks required for courses offered at the University of Victoria (UVic).
+  It allows users to search for desired textbooks and contact their fellow peers to trade.">
+  <meta name="author" content="Joe Czepil">
   <link rel="icon" href="../../favicon.ico">
 
-  <title>Texchange</title>
+  <title>Texchange UVic University of Victoria Exchange Textbooks</title>
 
   {% load staticfiles %}
   <!-- Bootstrap core CSS -->
