Cleaning code and files

--- a/textchange/templates/textchange/head.html
+++ b/textchange/templates/textchange/head.html
@@ -8,21 +8,19 @@
   <meta name="author" content="Joe Czepil">
   <link rel="icon" href="../../favicon.ico">
 
-  <title>Texchange UVic University of Victoria Exchange Textbooks</title>
+  <title>UVic Texchange Exchange Textbooks at University of Victoria</title>
 
   {% load staticfiles %}
+
   <!-- Bootstrap core CSS -->
   <link href="{% static "textchange/index.css" %}" rel="stylesheet">
   <link href="{% static "textchange/mycss.css" %}" rel="stylesheet">
-
   <!-- Custom styles for this template -->
   <link href="{% static "textchange/jumbotron.css" %}" rel="stylesheet">
-
   <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
   <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
   <script src="{% static "textchange/index.js" %}"></script>
   <script src="{% static "textchange/facebook.js" %}"></script>
-
 
   <link rel="shortcut icon" href="{% static "textchange/tabicon.png" %}">
 
@@ -38,5 +36,4 @@
   <meta property="og:title"         content="UVic Texchange" />
   <meta property="og:description"   content="Making textbook exchange at UVic easy!" />
   <meta property="og:image"         content="../../static/textchange/linkpic.jpg" />
-
 </head>
