--- a/textchange/templates/textchange/accountcreation.html
+++ b/textchange/templates/textchange/accountcreation.html
@@ -92,7 +92,7 @@
 
     <div class="container">
       <div class="header clearfix">
-          <h3 class="text-muted"><a class="blacklink" href="{% url 'textchange:index' %}">Texchange UVic</a></h3>
+          <h3 class="text-muted"><a class="softbutton homebutton blacklink" href="{% url 'textchange:index' %}">Texchange UVic</a></h3>
       </div>
 
       <div class="row marketing">
